<resources>
    <string name="app_name">Sales App</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="register">Register</string>
    <string name="log_out">Log Out</string>
    <string name="sign_up_details">Don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="sign_in_link"><u>Sign In</u></string>
    <string name="have_an_account">Have an account?</string>
    <string name="chooseshopCategory">Choose shop Category</string>
    <string name="close">Close</string>
    <string name="select_option">Select Option</string>
    <string name="shop_name">Shop Name</string>
    <string name="owner_name">Owner Name</string>
    <string name="category">Category</string>
    <string name="registered">Registered</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="installed">Downloaded</string>
    <string name="ratings">Ratings</string>
    <string name="owner_suggestion">Owner\'s Suggestions</string>
    <string name="your_suggestion">Your\'s Suggestions</string>
    <string name="save">Save</string>
    <string name="write_suggestions">Suggestion</string>
    <string name="register_quest">Did they register as a seller?</string>
    <string name="download_ques">Did they download the application?</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="no_feedback">No Feedback Found</string>
    <string name="not_set">Not Set</string>

    <string-array name="shopCategory">
        <item>Baker</item>
        <item>Books</item>
        <item>Chemist</item>
        <item>Clothes</item>
        <item>Electronics</item>
        <item>Flowers</item>
        <item>Grocery</item>
        <item>Hardware</item>
        <item>Jewellery</item>
        <item>News Agency</item>
        <item>Optician</item>
        <item>Pet</item>
        <item>Shoe</item>
        <item>Stationary</item>
        <item>Supermarket</item>
        <item>Toy</item>
        <item>Travel Agency</item>
    </string-array>

    <string-array name="yesNo">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="title_activity_feedback_list">FeedbackListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="added_by">Added By</string>
</resources>